--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <section class="gallery">
         <h2>Our Collection</h2>
         <div class="image-grid">
-            <img src="https://via.placeholder.com/300" alt="Fashion Image 1">
-            <img src="https://via.placeholder.com/300" alt="Fashion Image 2">
-            <img src="https://via.placeholder.com/300" alt="Fashion Image 3">
-            <img src="https://via.placeholder.com/300" alt="Fashion Image 4">
+            <img src="images/fashion1.jpg" alt="Fashion Image 1">
+            <img src="images/fashion2.jpg" alt="Fashion Image 2">
+            <img src="images/fashion3.jpg" alt="Fashion Image 3">
+            <img src="images/fashion4.jpg" alt="Fashion Image 4">
+
         </div>
     </section>
     
