--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             text-align: center;
         }
         header {
-            background: black;
+            background: url('background.jpg') no-repeat center center/cover;
             color: white;
-            padding: 20px;
+            padding: 80px 20px;
         }
         nav {
             display: flex;
