--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
     
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>Soeurs Attiree is your go-to destination for exclusive fashion pieces. Our goal is to bring stylish, high-quality outfits to fashion lovers worldwide.</p>
+        <p>About Us – Soeurs Attiree
+Soeurs Attiree is a small Instagram-based fashion store bringing you stylish and high-quality outfits. We believe fashion is all about confidence and self-expression. Our goal is to offer trendy, elegant, and exclusive pieces that make you stand out.
+
+Follow us for the latest collections and style inspiration! 💫✨
+
+📌 Shop Now: Soeurs Attiree
+📸 Follow us on Instagram: @soeursattiree.</p>
     </section>
     
     <section id="contact" class="contact">
