--- a/index.html
+++ b/index.html
@@ -78,15 +78,16 @@
     </div>
     
     <section id="about" class="about">
-        <h2>About Us</h2>
-        <p>About Us – Soeurs Attiree
-Soeurs Attiree is a small Instagram-based fashion store bringing you stylish and high-quality outfits. We believe fashion is all about confidence and self-expression. Our goal is to offer trendy, elegant, and exclusive pieces that make you stand out.
+    <h2>About Us</h2>
+    <p>Soeurs Attiree is a small Instagram-based fashion store bringing you stylish and high-quality outfits. 
+    We believe fashion is all about confidence and self-expression. Our goal is to offer trendy, elegant, and exclusive pieces that make you stand out.</p>
 
-Follow us for the latest collections and style inspiration! 💫✨
+    <p>Follow us for the latest collections and style inspiration! ✨💃</p>
 
-📌 Shop Now: Soeurs Attiree
-📸 Follow us on Instagram: @soeursattiree.</p>
-    </section>
+    <p>📌 <strong>Shop Now:</strong> <a href="https://soeursattiree.netlify.app/" target="_blank">Soeurs Attiree</a></p>
+    <p>📸 <strong>Follow us on Instagram:</strong> <a href="https://www.instagram.com/soeursattiree" target="_blank">@soeursattiree</a></p>
+</section>
+
     
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
